--- a/index.css
+++ b/index.css
@@ -4,87 +4,117 @@
     box-sizing: border-box;
 }
 
-.main-container {
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(12,3,51,0.3), rgba(12,3,51,0.3));
-    position: relative;
-    padding: 0 5%;
+section {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 110px 100px;
+}
+
+@media (max-width: 1000px) {
+    section {
+        padding: 100px 50px;
+    }
+}
+
+@media (max-width: 600px) {
+    section {
+        padding: 125px 30px;
+    }
+}
+
+.main-container {
+    position: relative;
     justify-content: center;
-}
-
-.bg-wrapper {
     text-align: center;
-}
-
-.bg-wrapper h1 {
-    font-size: 70px;
-    font-weight: 600;
+    min-height: 100vh;
     color: #fff;
-    margin: 0 5em 0 5em;
 }
 
-.bg-wrapper a {
-    text-decoration: none;
-    display: inline-block;
-    color: black;
-    font-size: 24px;
-    border: 2px solid yellow;
-    background-color: yellow;
-    margin-top: 3em;
-    padding: 14px 40px;
-    transition: all .2s ease-in-out;
-}
-
-.bg-wrapper a:hover {
-    transform: scale(1.1);
-}
-
-h2 {
-    font-size: 35px;
-    color: #fff;
-    padding-top: 1em;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(241, 241, 1);
-    transition: 0.5s ;
-}
-
-h2:hover {
-    -webkit-text-stroke: 1px rgb(216, 231, 0);
-    color: transparent;
-}
-
-p {
-    font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 0.5em;
-    color: rgb(241, 241, 1);
-    transition: 0.5s ;
-}
-
-p:hover {
-    -webkit-text-stroke: 1px rgb(216, 231, 0);
-    color: transparent;
-}
-
-.back-video {
+.main-container video {
     position: absolute;
-    right: 0;
-    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
     z-index: -1;
 }
 
-@media (min-aspect-ratio: 16/9) {
-    .back-video {
-        width: 100%;
-        height: auto;
+.main-container h1 {
+    margin-bottom: 15px;
+    font-family: 'Khand', sans-serif;
+    font-size: 70px;
+    text-transform: uppercase;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.main-container h2 {
+    margin-bottom: 35px;
+    font-family: 'Overlock', cursive;
+    font-size: 35px;
+}
+
+.main-container p {
+    font-family: 'Telex', sans-serif;
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
+.main-container a.button {
+    padding: 15px 35px;
+    background: rgb(248, 244, 0);
+    color: black;
+    transition: all .2s ease-in-out;
+    border-radius: 5px;
+    transition: all .2s ease-in-out;
+}
+
+.main-container a.button:hover {
+     transform: scale(1.1);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+@media (max-width: 800px) {
+    .main-container {
+        min-height: 600px;
+    }
+    .main-container h1 {
+        font-size: 35px;
+    }
+    .main-container h2 {
+        font-size: 25px;
+    }
+    .main-container p {
+        font-size: 16px;
+    }
+    .main-container a.button {
+        padding: 15px 40px;
+        background: rgb(248, 244, 0);
     }
 }
-@media (max-aspect-ratio: 16/9) {
-    .back-video {
-        width: auto;
-        height: 100%;
+
+
+@media only screen and (-webkit-min-device-pixel-ratio: 3) {
+    .main-container {
+        min-height: 1000px;
+    }
+    .main-container h1 {
+        font-size: 45px;
+    }
+    .main-container h2 {
+        font-size: 20px;
+    }
+    .main-container p {
+        font-size: 16px;
+    }
+    .main-container a.button {
+        padding: 15px 40px;
+        background: rgb(248, 244, 0);
     }
 }
