--- a/style.css
+++ b/style.css
@@ -38,14 +38,15 @@ section {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(50%);
+    filter: brightness(30%);
     z-index: -1;
 }
 
 .main-container h1 {
     margin-bottom: 15px;
     font-family: 'Khand', sans-serif;
-    font-size: 70px;
+    line-height: 1.1;
+    font-size: 110px;
     text-transform: uppercase;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
 }
@@ -54,11 +55,18 @@ section {
     margin-bottom: 35px;
     font-family: 'Overlock', cursive;
     font-size: 35px;
+    color: rgb(248, 244, 0);
+}
+
+.main-container .paragraph {
+    padding: 25px 150px;
+    font-weight: lighter;
 }
 
 .main-container p {
     font-family: 'Telex', sans-serif;
     font-size: 20px;
+    font-weight: lighter;
     margin-bottom: 50px;
 }
 
@@ -80,23 +88,58 @@ a {
     color: inherit;
 }
 
+/* -- MEDIA QUERY --  */
+
+@media (min-width: 2300px) {
+    section {
+        padding: 75px 70px;
+    }
+
+    .main-container {
+        min-height: 400px;
+    }
+    .main-container h1 {
+        padding: 50px 180px;
+    }
+    .main-container .paragraph {
+        padding: 25px 480px;
+    }
+}
+
 @media (max-width: 800px) {
     .main-container {
         min-height: 600px;
     }
     .main-container h1 {
-        font-size: 35px;
+        font-size: 45px;
     }
     .main-container h2 {
         font-size: 25px;
     }
-    .main-container p {
-        font-size: 16px;
+    .main-container .paragraph {
+        padding: 2px 50px;
     }
     .main-container a.button {
         padding: 15px 40px;
         background: rgb(248, 244, 0);
     }
+}
+
+@media (max-width: 600px) {
+    .main-container {
+        min-height: 500px;
+    }
+    .main-container h1 {
+        font-size: 38px;
+    }
+    .main-container h2 {
+        font-size: 22px;
+        padding: 3px  68px;
+    }
+    .paragraph p {
+        font: 15px;
+    }
+    
 }
 
 
