--- a/style.css
+++ b/style.css
@@ -44,16 +44,23 @@ section {
 
 .main-container h1 {
     margin-bottom: 15px;
-    font-family: 'Khand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 100px;
+    padding: 5px 109px;
     line-height: 1.1;
-    font-size: 110px;
-    text-transform: uppercase;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 1800px) {
+    .main-container h1 {
+        margin-bottom: 15px;
+        font-size: 90px;
+        padding: 5px 109px;
 }
 
 .main-container h2 {
     margin-bottom: 35px;
-    font-family: 'Overlock', cursive;
+    font-family: 'Lora', serif;
     font-size: 35px;
     color: rgb(248, 244, 0);
 }
@@ -64,7 +71,7 @@ section {
 }
 
 .main-container p {
-    font-family: 'Telex', sans-serif;
+    font-family: 'Mulish', sans-serif;
     font-size: 20px;
     font-weight: lighter;
     margin-bottom: 50px;
