--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 110px 100px;
+    right: 0;
+    width: 100%;
+    min-height: 100vh;
 }
 
 @media (max-width: 1000px) {
@@ -38,7 +40,7 @@ section {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(30%);
+    filter: brightness(10%);
     z-index: -1;
 }
 
